# docs/swagger.json
@@ -6,9 +6,8 @@
         "contact": {},
         "version": "1.0.0"
     },
-    "basePath": "/api",
     "paths": {
-        "/v1/livenessHandler": {
+        "/api/v1/health/liveness": {
             "get": {
                 "description": "Check service health return \"OK\"",
                 "produces": [
@@ -28,7 +27,7 @@
                 }
             }
         },
-        "/v1/readinessHandler": {
+        "/api/v1/health/readiness": {
             "get": {
                 "description": "Check connection to database and other services",
                 "produces": [
@@ -45,12 +44,6 @@
                             "$ref": "#/definitions/health.readinessResponseUp"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errs.HTTPError"
-                        }
-                    },
                     "503": {
                         "description": "Service Unavailable",
                         "schema": {
@@ -62,17 +55,6 @@
         }
     },
     "definitions": {
-        "errs.HTTPError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "health.livenessStatus": {
             "type": "string",
             "enum": [
